tests/error/addInteger-string-wrong-1st-argument.uplc
(program 1.0.0[[(builtin addInteger)(con string "Ola")](con integer 10)])